remove width property from html element and set width on body element with overflow-x hidden to avoid horizontal bars

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,11 +18,12 @@
 
 html {
   scroll-behavior: smooth;
-  width: 100vw;
 }
 
 body {
   background-color: var(--black);
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 main {
